Some json edits

--- a/UPE/Q1.ipynb
+++ b/UPE/Q1.ipynb
@@ -6,19 +6,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter x:  118\n",
-      "Enter y:  24\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Variables before swap: 118 24\n",
-      "Variables after swap: 24 118\n"
+     "output_type": "error",
+     "ename": "Error",
+     "evalue": "Jupyter cannot be started. Error attempting to locate jupyter: Data Science libraries notebook and jupyter are not installed in interpreter Python 3.8.5 64-bit.",
+     "traceback": [
+      "Error: Jupyter cannot be started. Error attempting to locate jupyter: Data Science libraries notebook and jupyter are not installed in interpreter Python 3.8.5 64-bit.",
+      "at S.startServer (/home/harsh/.vscode/extensions/ms-toolsai.jupyter-2021.6.832593372/out/client/extension.js:54:382764)",
+      "at async S.createServer (/home/harsh/.vscode/extensions/ms-toolsai.jupyter-2021.6.832593372/out/client/extension.js:54:382059)",
+      "at async connect (/home/harsh/.vscode/extensions/ms-toolsai.jupyter-2021.6.832593372/out/client/extension.js:90:179008)",
+      "at async D.ensureConnectionAndNotebookImpl (/home/harsh/.vscode/extensions/ms-toolsai.jupyter-2021.6.832593372/out/client/extension.js:37:627194)",
+      "at async D.ensureConnectionAndNotebook (/home/harsh/.vscode/extensions/ms-toolsai.jupyter-2021.6.832593372/out/client/extension.js:37:625426)",
+      "at async D.clearResult (/home/harsh/.vscode/extensions/ms-toolsai.jupyter-2021.6.832593372/out/client/extension.js:37:621088)",
+      "at async D.reexecuteCell (/home/harsh/.vscode/extensions/ms-toolsai.jupyter-2021.6.832593372/out/client/extension.js:37:607353)",
+      "at async D.reexecuteCells (/home/harsh/.vscode/extensions/ms-toolsai.jupyter-2021.6.832593372/out/client/extension.js:37:603557)"
      ]
     }
    ],
